objects/Service_sales_pipeline__c.object
<CustomObject>
    <description>SVCの保守販促チームが主に活用します</description>
    <fields>
        <fullName>ATT2__c</fullName>
        <label>ATT契約・受注確度</label>
        <picklist>
            <picklistValues>
                <fullName>Z</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATT3__c</fullName>
        <label>ATT契約・満了予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ATT__c</fullName>
        <label>ATT契約・進捗状況</label>
        <picklist>
            <picklistValues>
                <fullName>提案中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>見積作成中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>見積提示中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>顧客予算承認段階</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>注文書受理</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>契約書作成段階</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>契約書発送</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>商談流れ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adress1__c</fullName>
        <description>納入先住所</description>
        <label>納入先住所</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Adress2__c</fullName>
        <description>契約先住所</description>
        <label>契約先住所</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Affiliation1__c</fullName>
        <description>納入先所属</description>
        <label>納入先所属</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Affiliation2__c</fullName>
        <description>契約先所属</description>
        <label>契約先所属</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Charge1__c</fullName>
        <description>納入先ご担当者</description>
        <label>納入先ご担当者</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge2__c</fullName>
        <description>契約先担当者</description>
        <label>契約先ご担当者</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code1__c</fullName>
        <description>納入先のコード</description>
        <label>納入先コード</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code2__c</fullName>
        <description>納入先コード</description>
        <label>契約先コード</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_start__c</fullName>
        <label>契約開始予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_stop__c</fullName>
        <defaultValue>false</defaultValue>
        <description>契約中止かどうかの選択</description>
        <label>契約中止</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_reply__c</fullName>
        <description>顧客からの返信内容</description>
        <label>更新対応履歴</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_reply_date__c</fullName>
        <description>顧客からの返信があって日付</description>
        <label>最終対応日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cyumonsyo__c</fullName>
        <description>注文書を受領した日付</description>
        <inlineHelpText>注文書を受領した日付</inlineHelpText>
        <label>注文書受領</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_closing__c</fullName>
        <description>受注予定日</description>
        <label>受注予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EF切れ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimate__c</fullName>
        <description>見積金額</description>
        <label>見積金額(税抜)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimate_nember__c</fullName>
        <description>見積番号</description>
        <label>見積番号</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAX__c</fullName>
        <description>納入先FAX</description>
        <label>契約先FAX</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field10__c</fullName>
        <label>更新案内作成状況</label>
        <picklist>
            <picklistValues>
                <fullName>差込OK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>確認中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>訪問予定</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>送付しない</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <label>複数合算見積金額(税抜き)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Field12__c</fullName>
        <label>複数合算契約金額(税抜き)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>He2__c</fullName>
        <label>He充填契約・進捗状況</label>
        <picklist>
            <picklistValues>
                <fullName>提案中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>見積作成中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>見積提示中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>顧客予算承認段階</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>注文書受理</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>契約書作成段階</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>契約書発送</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>商談流れ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>He3__c</fullName>
        <label>He充填契約・受注確度</label>
        <picklist>
            <picklistValues>
                <fullName>Z</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>He4__c</fullName>
        <label>He充填契約・開始予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hontai_Name__c</fullName>
        <label>本体正式名称</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hontai__c</fullName>
        <label>本体番号</label>
        <referenceTo>CustomObject1__c</referenceTo>
        <relationshipLabel>保守パイプライン</relationshipLabel>
        <relationshipName>Hontai_servivce_sales</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Hosyu_Bikou__c</fullName>
        <label>備考</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>K_kensyu__c</fullName>
        <formula>Hontai__r.Field5__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>本体検収日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>K_mitumori1__c</fullName>
        <description>本体契約の見積番号を記載ください</description>
        <inlineHelpText>本体契約の見積番号を記載ください</inlineHelpText>
        <label>本体契約・見積番号</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>K_mitumori2__c</fullName>
        <description>見積もり番号を記載ください</description>
        <inlineHelpText>見積もり番号を記載ください</inlineHelpText>
        <label>He充填契約・見積番号</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>K_mitumori3__c</fullName>
        <description>見積もり番号を記載ください</description>
        <inlineHelpText>見積もり番号を記載ください</inlineHelpText>
        <label>NS/NR契約・見積番号</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>K_sales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>本商談の担当を選択して下さい。</description>
        <inlineHelpText>本商談の担当を選択して下さい。</inlineHelpText>
        <label>本商談の担当</label>
        <referenceTo>User</referenceTo>
        <relationshipName>k_sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>K_tantou__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>本契約で対応している相手名を選択して下さい。</description>
        <inlineHelpText>本契約で対応している相手名を選択して下さい。
無い場合は、名刺情報を基に取引先・取引先責任者登録を依頼して下さい。</inlineHelpText>
        <label>御担当者</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>保守パイプライン</relationshipLabel>
        <relationshipName>k_tantou</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>K_yosan__c</fullName>
        <description>顧客予算を記載ください</description>
        <inlineHelpText>顧客予算を記載ください</inlineHelpText>
        <label>顧客予算</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>K_yosanziki__c</fullName>
        <description>顧客予算申請時期を記載ください</description>
        <inlineHelpText>顧客予算申請時期を記載ください</inlineHelpText>
        <label>予算申請時期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>K_zokusei__c</fullName>
        <description>契約属性を選択して下さい</description>
        <inlineHelpText>契約属性を選択して下さい</inlineHelpText>
        <label>契約属性</label>
        <picklist>
            <picklistValues>
                <fullName>新規</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>更新</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R契約</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J契約</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>未選択</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Kazei_hyouzi__c</fullName>
        <label>課税表示</label>
        <picklist>
            <picklistValues>
                <fullName>税込(官公庁)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>税抜(民間)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Keiyaku_Type__c</fullName>
        <label>契約タイプ</label>
        <picklist>
            <picklistValues>
                <fullName>有期契約</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>無期契約</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Keiyaku_naiyou__c</fullName>
        <description>保守契約の内容</description>
        <inlineHelpText>保守契約の内容</inlineHelpText>
        <label>契約内容</label>
        <picklist>
            <picklistValues>
                <fullName>本体(点検2回)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>本体(点検1回）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>本体(点検無し)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NS/NR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>He</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>He(充填作業のみ)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Keiyaku_naiyou_bikou__c</fullName>
        <label>契約内容備考</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Keiyakusyo__c</fullName>
        <description>契約書を締結した日付</description>
        <inlineHelpText>契約書を締結した日付</inlineHelpText>
        <label>契約書締結済み</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Keizoku__c</fullName>
        <description>継続依頼書が返信された日付</description>
        <inlineHelpText>継続依頼書が返信された日付</inlineHelpText>
        <label>継続依頼書返信あり</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Koushin_Houhou__c</fullName>
        <label>更新案内方法</label>
        <picklist>
            <picklistValues>
                <fullName>郵送</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>訪問</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>その他(入札･JEOL契約など)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Koushin__c</fullName>
        <description>更新案内を送付した日付</description>
        <inlineHelpText>更新案内を送付した日付</inlineHelpText>
        <label>更新案内送付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LHE__c</fullName>
        <description>LHE契約金額値上げ対象かどうか</description>
        <label>LHE値上げ対象</label>
        <picklist>
            <picklistValues>
                <fullName>値上げ対象</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>対象外</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Latest_Contract_finish__c</fullName>
        <description>契約終了日</description>
        <label>契約終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Contract_start__c</fullName>
        <description>契約開始日</description>
        <label>契約開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_estimate_1_Tax__c</fullName>
        <formula>Latest_estimate_1__c  +  Tax_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>最終見積金額(税込)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Latest_estimate_1__c</fullName>
        <label>最終見積金額(税抜)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Latest_estimate_2_Tax__c</fullName>
        <formula>Latest_estimate_2__c  +  Tax_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>最終見積金額(税込)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Latest_estimate_2__c</fullName>
        <label>最終見積金額(税抜)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ltest_estimate_nember_1__c</fullName>
        <label>最終見積番号</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ltest_estimate_nember_2__c</fullName>
        <label>最終見積番号</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_contract_apparatus_1__c</fullName>
        <description>見積件名</description>
        <label>見積件名</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_contract_apparatus_2__c</fullName>
        <label>見積件名</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mitsumori_Sakusei__c</fullName>
        <description>見積作成した日付</description>
        <inlineHelpText>見積作成した日付</inlineHelpText>
        <label>見積作成</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mitsumori_Soufu__c</fullName>
        <description>見積書を送付した日付</description>
        <inlineHelpText>見積書を送付した日付</inlineHelpText>
        <label>見積送付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mitsumori_Syounin__c</fullName>
        <description>見積承認した日付</description>
        <inlineHelpText>見積承認した日付</inlineHelpText>
        <label>見積承認</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NET__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NET保守切れ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NS_NR1__c</fullName>
        <label>NS/NR契約・進捗状況</label>
        <picklist>
            <picklistValues>
                <fullName>提案中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>見積作成中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>見積提示中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>顧客予算承認段階</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>注文書受理</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>契約書作成段階</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>契約書発送</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>商談流れ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NS_NR2__c</fullName>
        <label>NS/NR契約・受注確度</label>
        <picklist>
            <picklistValues>
                <fullName>Z</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NS_NR4__c</fullName>
        <label>NS/NR契約・開始予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name1__c</fullName>
        <description>納入先名称</description>
        <label>納入先名称</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name2__c</fullName>
        <description>契約先名称</description>
        <label>契約先名称</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OLD_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>旧環境SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PDF_1__c</fullName>
        <label>更新完了（PDF取込済）[仮完了]</label>
        <picklist>
            <picklistValues>
                <fullName>完了</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>未完了</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PDF__c</fullName>
        <label>更新完了(PDF取込済）</label>
        <picklist>
            <picklistValues>
                <fullName>完了</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>未完了</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Postal1__c</fullName>
        <description>納入先の郵便番号</description>
        <label>納入先郵便番号</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal2__c</fullName>
        <description>契約先郵便番号</description>
        <label>契約先郵便</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>契約更新</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_FAX__c</fullName>
        <description>納入先のFAX番号</description>
        <label>納入先FAX</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tantousya_1__c</fullName>
        <label>1-担当者/コメント</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tantousya_2__c</fullName>
        <label>2-担当者/コメント</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tantousya_3__c</fullName>
        <label>3-担当者/コメント</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tax_1__c</fullName>
        <formula>FLOOR(Latest_estimate_1__c * 0.08)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>税</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_2__c</fullName>
        <formula>FLOOR(Latest_estimate_2__c  * 0.08)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>税</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Telephone1__c</fullName>
        <description>納入先電話</description>
        <label>納入先電話</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone2__c</fullName>
        <description>契約先電話</description>
        <label>契約先電話</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ukesyo__c</fullName>
        <description>請書を発送した日付</description>
        <inlineHelpText>請書を発送した日付</inlineHelpText>
        <label>請書発送済み</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UnitBodyLink__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>本体号機</label>
        <referenceTo>UnitBody__c</referenceTo>
        <relationshipLabel>保守パイプライン</relationshipLabel>
        <relationshipName>Service_sales_pipeline</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Updating__c</fullName>
        <description>更新案内の送付に関する処理</description>
        <label>更新案内送付先</label>
        <picklist>
            <picklistValues>
                <fullName>契約先</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>納入先</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>作成しない</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Updating_date__c</fullName>
        <description>更新案内を送付した日付</description>
        <label>更新案内送付日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Updating_method_1__c</fullName>
        <description>更新の方法</description>
        <label>更新方法</label>
        <picklist>
            <picklistValues>
                <fullName>請書</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>契約書</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>自動更新</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Updating_method_2__c</fullName>
        <label>更新方法</label>
        <picklist>
            <picklistValues>
                <fullName>請書</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>契約書</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>自動更新</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Updating_mont__c</fullName>
        <description>更新した月</description>
        <label>更新月</label>
        <picklist>
            <picklistValues>
                <fullName>4月</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5月</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6月</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7月</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8月</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9月</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10月</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11月</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12月</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1月</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2月</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3月</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>年度</description>
        <label>年度</label>
        <picklist>
            <picklistValues>
                <fullName>2012FY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013FY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014FY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015FY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016FY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017FY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018FY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zen_Kingaku__c</fullName>
        <description>前年度分の複数台合計見積金額</description>
        <label>前年度 複数合算 見積金額(税抜き)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>chiikishiten__c</fullName>
        <label>地域支店</label>
        <picklist>
            <picklistValues>
                <fullName>東京</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>名古屋</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>仙台</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>札幌</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>筑波</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>大阪</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>広島</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>福岡</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>横浜</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>高松</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JEOL (North America)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JEOL (Asia/China)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JEOL (Europe)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>hontai_status__c</fullName>
        <label>本体契約・進捗状況</label>
        <picklist>
            <picklistValues>
                <fullName>提案中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>見積作成中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>見積提示中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>顧客予算承認段階</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>注文書受理</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>契約書作成段階</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>契約書発送</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>商談流れ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>k_att_kaishi__c</fullName>
        <label>ATT契約・開始予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>k_hon_kaishi__c</fullName>
        <description>本体契約開始予定日を記載ください</description>
        <inlineHelpText>本体契約開始予定日を記載ください</inlineHelpText>
        <label>本体契約・開始予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>k_moneymitu1__c</fullName>
        <description>見積提示金額を記載ください</description>
        <inlineHelpText>見積提示金額を記載ください</inlineHelpText>
        <label>本体契約・見積提示金額</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>k_moneymitu2__c</fullName>
        <description>見積もり提示金額を記載ください</description>
        <inlineHelpText>見積もり提示金額を記載ください</inlineHelpText>
        <label>He充填契約・見積提示金額</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>k_moneymitu3__c</fullName>
        <description>見積もり提示金額を記載ください</description>
        <inlineHelpText>見積もり提示金額を記載ください</inlineHelpText>
        <label>NS/NR契約・見積提示金額</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>probability_to_win__c</fullName>
        <description>受注確度</description>
        <label>受注確度</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>保守パイプライン</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Hontai__c</columns>
        <columns>Field1__c</columns>
        <columns>EF__c</columns>
        <columns>NET__c</columns>
        <columns>Renewal__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>ServiceSalesPipelineView</fullName>
        <columns>NAME</columns>
        <columns>Hontai__c</columns>
        <columns>Year__c</columns>
        <columns>Latest_Contract_start__c</columns>
        <columns>Latest_Contract_finish__c</columns>
        <columns>Field1__c</columns>
        <filterScope>Everything</filterScope>
        <label>保守パイプライン</label>
    </listViews>
    <nameField>
        <label>保守パイプライン名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>